carousal bug on mobile

--- a/assets/assets/styles/sapient.carousel.less
+++ b/assets/assets/styles/sapient.carousel.less
@@ -180,9 +180,9 @@
 		left: 0;
 		top: 73%;
 
-		.carousel-indicators {
+		/* .carousel-indicators {
 			left: 35%;
-		}
+		} */
 
 		.carousal-desc-wrapper {
 			text-align: center;
