--- a/assets/assets/styles/sapient.footer.less
+++ b/assets/assets/styles/sapient.footer.less
@@ -197,6 +197,7 @@ footer {
             margin-bottom: 10px;
             nav {
                 ul {
+                	font-family: "NeutraText Bold";
                     li {
                         float: none;
                         &.icon-Wine {
