--- a/assets/assets/styles/sapient.menu-header.less
+++ b/assets/assets/styles/sapient.menu-header.less
@@ -218,6 +218,7 @@ header {
 				border-bottom: 2px solid  @light-blue;
 				bottom: 0;
 				margin: 0;
+				max-width: none;
 				position: fixed;
 				top: 63px;
 				width: 100%;
